--- a/front/html/product.html
+++ b/front/html/product.html
@@ -110,6 +110,6 @@
         </div>
       </div>
     </footer>
-  <script src="../js/product.js"></script>
+  <script src="../../back/routes/product.js"></script>
   </body>
 </html>
