--- a/front/html/product.html
+++ b/front/html/product.html
@@ -110,6 +110,8 @@
         </div>
       </div>
     </footer>
-  <script type="commonjs" src="../../back/routes/product.js"></script>
+  <script src="../../back/routes/product.js">
+    console.log("curlynux");
+  </script>
   </body>
 </html>
