everything works fine

--- a/front/html/product.html
+++ b/front/html/product.html
@@ -110,8 +110,7 @@
         </div>
       </div>
     </footer>
-  <script src="../../back/routes/product.js">
-    console.log("curlynux");
+  <script type="module" src="../../back/routes/product.js">
   </script>
   </body>
 </html>
