--- a/front/html/product.html
+++ b/front/html/product.html
@@ -47,18 +47,18 @@
         <section class="item">
           <article>
             <div class="item__img">
-              <!-- <img src="../images/logo.png" alt="Photographie d'un canapé"> -->
+              <img src="../images/logo.png" alt="Photographie d'un canapé">
             </div>
             <div class="item__content">
 
               <div class="item__content__titlePrice">
-                <h1 id="title"><!-- Nom du produit --></h1>
-                <p>Prix : <span id="price"><!-- 42 --></span>€</p>
+                <h1 id="title">Nom du produit</h1>
+                <p>Prix : <span id="price">42</span>€</p>
               </div>
 
               <div class="item__content__description">
                 <p class="item__content__description__title">Description :</p>
-                <p id="description"><!-- Dis enim malesuada risus sapien gravida nulla nisl arcu. --></p>
+                <p id="description">Dis enim malesuada risus sapien gravida nulla nisl arcu.</p>
               </div>
 
               <div class="item__content__settings">
@@ -66,8 +66,8 @@
                   <label for="color-select">Choisir une couleur :</label>
                   <select name="color-select" id="colors">
                       <option value="">--SVP, choisissez une couleur --</option>
-<!--                       <option value="vert">vert</option>
-                      <option value="blanc">blanc</option> -->
+                       <option value="vert">vert</option>
+                      <option value="blanc">blanc</option>
                   </select>
                 </div>
 
@@ -110,7 +110,7 @@
         </div>
       </div>
     </footer>
-  <script type="module" src="../../back/routes/product.js">
+  <script src="../js/product.js">
   </script>
   </body>
 </html>
