--- a/front/html/product.html
+++ b/front/html/product.html
@@ -110,7 +110,6 @@
         </div>
       </div>
     </footer>
-  <script src="../js/product.js">
-  </script>
+  <script type="text/javascript" src="../js/product.js"></script>
   </body>
 </html>
