working on cart

--- a/front/html/product.html
+++ b/front/html/product.html
@@ -78,7 +78,7 @@
               </div>
 
               <div class="item__content__addButton">
-                <button id="addToCart">Ajouter au panier</button>
+                <a href="./cart.html"><button id="addToCart">Ajouter au panier</button></a>
               </div>
 
             </div>
